--- a/intro.html
+++ b/intro.html
@@ -24,17 +24,23 @@
     <div class="blue">This is a toid div</div>
 
     <ol id="thelist">
-      <li>item 0</li>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-      <li>item 6</li>
-      <li>item 7</li>
+      <li class="items">item 0</li>
+      <li class="items">item 1</li>
+      <li class="items">item 2</li>
+      <li class="items">item 3</li>
+      <li class="items">item 4</li>
+      <li class="items">item 5</li>
+      <li class="items">item 6</li>
+      <li class="items">item 7</li>
+    </ol>
+
+    <ol id="fiblist">
+
     </ol>
 
     <button id="b">The button</button>
+
+    <button id="f">Fib Button</button>
     
     <script src="intro.js"></script>
   </body>
