Slight html update

--- a/intro.html
+++ b/intro.html
@@ -34,16 +34,17 @@
       <li class="items">item 7</li>
     </ol>
 
+    <button id="b">The button</button>
+
+    <h1 id="hfib" class="blue">Fibonacci!</h1>
+
     <ol id="fiblist">
 
     </ol>
 
-    <button id="b">The button</button>
 
     <button id="f">Fib Button</button>
-    
     <script src="intro.js"></script>
   </body>
 
 </html>
-
